--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/react-highlight-words": "^0.16.4",
     "antd": "5.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
