--- a/testServer/package.json
+++ b/testServer/package.json
@@ -15,5 +15,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "nanoid": "^4.0.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.0.1"
   }
 }
