--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-highlight-words": "^0.16.4",
     "antd": "^5.5.1",
     "dayjs": "^1.11.7",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
