--- a/testServer/package.json
+++ b/testServer/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "nanoid": "^4.0.2"
+    "nanoid": "^4.0.2",
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.1"
